test/select/select-raw.out

CIDR           IP Block            b16           NHI                 
--             0.0.0.0/26          0x00000000    
0              0.0.0.16/29         0x00000010    1
0/0            0.0.0.16/30         0x00000010    
1              0.0.0.8/29          0x00000008    2
1/0            0.0.0.8/30          0x00000008    
2              0.0.0.0/29          0x00000000    3
2/0            0.0.0.0/30          0x00000000    
3              0.0.0.32/30         0x00000020    1:1(1) 2:1(1) 
4              0.0.0.28/30         0x0000001c    1:1(2) 3:1(1) 
5              0.0.0.24/30         0x00000018    2:1(2) 3:1(2) 

NHI Addr            CIDR Level          IP Address Block    % util    
--                  --                  0.0.0.0/26          59.375    
1                   0                   0.0.0.16/29         75.0      
2                   1                   0.0.0.8/29          75.0      
3                   2                   0.0.0.0/29          75.0      

** 		 Using specified 1.0ns clock resolution


--- Phase I: construct table of routers and hosts


--- Phase II: connect Point-To-Point links


--- Phase III: add static routes
## Net config: 3 routers and hosts
## Elapsed time: 0.553 seconds
** Running for 1000000000000 clock ticks (== 1000.0 seconds sim time)
----------------------------------------------------------------------
|	Raceway SSF 1.0b09 (2 May 2001)
|	 Proprietary Internal Development Release
|	(c)2000,2001 Renesys Corporation
----------------------------------------------------------------------

~#
~# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
~# SELECT Validation Test: successful if five steps printed below
~# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
~#
~# 1. AS X: sent route advertisements to AS Y and AS Z
~# 2. AS Z: received advertisement from AS X; added route to forwarding table
~# 3. AS Y: received advertisement from AS X and forwarded the information to Z
~# 4. AS Z: received route info from AS Y about X
~# 5. AS Z: rejected new route info about X (worse than other known route to X)
~#             *** TEST SUCCESSFUL ***
~#
----------------------------------------------------------------------
| 1 timelines, 5 barriers, 7120 events, 852 ms, 13 Kevt/s
----------------------------------------------------------------------
